# QtGl

./: CMakeLists.txt  LICENSE  README.md
include/: Window.hpp
include/glad/: glad.h
src/: Window.cpp  glad.c  main.cpp
